[project]
package-mode = false
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem",email = "artem@my.org"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "locust-plugins (>=5.0.0,<6.0.0)",
    "locust (>=2.42.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.13,<4"